--- a/src/components/Post/Post.css
+++ b/src/components/Post/Post.css
@@ -30,3 +30,39 @@
     height: 2rem;
     width: 2rem;
 }
+/* .detail img{
+    height: 1.5rem;
+    width: 1.5rem;
+    border-radius: 50%;
+    margin-right: 1rem;
+} */
+
+.detail {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .user-link {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: inherit;
+  }
+  
+  .user-photo {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    margin-right: 10px;
+  }
+  
+  .user-name {
+    font-weight: bold;
+  }
+  
+  .timeago {
+    margin-left: 10px;
+    color: grey;
+    font-size: 0.7rem;
+  }
+  
