Near complete of this project and fiexed all functions

--- a/src/components/LogoSearch/LogoSearch.css
+++ b/src/components/LogoSearch/LogoSearch.css
@@ -1,4 +1,4 @@
-.LogoSearch {
+/* .LogoSearch { 
   display: flex;
   gap: 0.75rem;
 }
@@ -25,4 +25,66 @@
 .logoImg{
   height: 2rem;
   width: 2rem;
+}  */
+
+.LogoSearch {
+  display: flex;
+  align-items: center;
+}
+
+.logoImg {
+  height: 50px;
+}
+
+.Search {
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+  border: 1px solid #ccc;
+  border-radius: 20px;
+  padding: 5px 10px;
+  background-color: var(--inputColor);
+}
+
+.Search input {
+  border: none;
+  outline: none;
+  padding: 5px;
+  background-color: transparent;
+
+}
+
+.s-icon {
+  cursor: pointer;
+  padding-left: 5px;
+}
+
+.SearchResults {
+  position: absolute;
+  background: white;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  width: 10%;
+  max-height: 200px;
+  overflow-y: auto;
+  margin:8rem 1rem 1rem 4rem;
+  z-index: 1;
+}
+
+.SearchResultItem {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.SearchResultItem:hover {
+  background: #cac4c4;
+}
+
+.SearchResultImg {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  margin-right: 10px;
 }
