--- a/src/components/Post/Post.css
+++ b/src/components/Post/Post.css
@@ -6,7 +6,84 @@
     background-color: var(--cardColor);
     border-radius: 1rem;
     gap: 1rem;
+    position: relative;
+
 }
+
+.menu-container {
+  position: relative;
+}
+
+.three-dot-menu {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  width: 20px; /* Adjust size as needed */
+  height: 20px; /* Adjust size as needed */
+}
+
+.menu {
+  position: absolute;
+  top: 20px;
+  right: 0;
+  background: white;
+  border: 1px solid #ccc;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+  z-index: 10;
+}
+
+.menu-item {
+  padding: 10px;
+  cursor: pointer;
+}
+
+.menu-item:hover {
+  background-color: #f0f0f0;
+}
+
+.should-under{
+  margin-top: 2rem;
+}
+
+.modal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+}
+
+.cancel{
+  margin-left: 2rem;
+}
+
+.modal-content {
+  background: white;
+  padding: 20px;
+  border-radius: 5px;
+  width: 300px;
+  max-width: 90%;
+}
+
+.modal-content textarea{
+  height: 10rem;
+  width: 18rem;
+}
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 20px;
+  cursor: pointer;
+}
+
 
 .Post>img{
     width: 50%;
@@ -30,12 +107,15 @@
     height: 2rem;
     width: 2rem;
 }
-/* .detail img{
-    height: 1.5rem;
-    width: 1.5rem;
-    border-radius: 50%;
-    margin-right: 1rem;
-} */
+
+ .postImage{
+  max-width: 100%;  /* Ensure the image doesn't exceed the container's width */
+  max-height: 400px;  /* Set a maximum height for the image */
+  width: auto;  /* Maintain the image's aspect ratio */
+  height: auto;  /* Maintain the image's aspect ratio */
+  display: block;  /* Ensure the image behaves like a block element */
+  margin: 0 auto;  /* Center the image horizontally */
+ }
 
 .detail {
     display: flex;
