--- a/src/components/ChatBox/ChatBox.css
+++ b/src/components/ChatBox/ChatBox.css
@@ -20,31 +20,28 @@
 }
 
 .message {
-
-  background: var(--buttonBg);
-  color: white;
-  padding: 0.7rem;
-  border-radius: 1rem 1rem 1rem 0;
-  max-width: 28rem;
-  width: fit-content;
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
+    background: var(--buttonBg);
+    color: white;
+    padding: 0.7rem;
+    border-radius: 1rem 1rem 1rem 0;
+    max-width: 28rem;
+    width: fit-content;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
 }
 
-.message>span:nth-child(2){
+.message > span:nth-child(2) {
     font-size: 0.7rem;
     color: var(--textColor);
     align-self: end;
 }
 
 .own {
-  align-self: flex-end;
-  border-radius: 1rem 1rem 0 1rem;
-  background: linear-gradient(98.63deg, #24e4f0 0%, #358ff9 100%);
+    align-self: flex-end;
+    border-radius: 1rem 1rem 0 1rem;
+    background: linear-gradient(98.63deg, #24e4f0 0%, #358ff9 100%);
 }
-
-
 
 .chat-sender {
     background: white;
@@ -57,27 +54,140 @@
     border-radius: 1rem;
     align-self: end;
 }
-.chat-sender>input{
+
+.chat-sender > input {
     height: 70%;
     background-color: rgb(236, 236, 236);
     border-radius: 0.5rem;
     border: none;
     outline: none;
-    flex  :1 ;
+    flex: 1;
     font-size: 14px;
     padding: 0px 15px 0px 15px;
 }
-.chat-sender>div:nth-of-type(1)
-{
+
+.chat-sender > div:nth-of-type(1) {
     background: rgb(233, 233, 233);
     border-radius: 0.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
     font-weight: bold;
-    cursor: pointer
+    cursor: pointer;
 }
-.chat-sender>div{
+
+.chat-sender > div {
     height: 70%;
     padding: 0px 15px 0px 15px;
+}
+
+/* Responsive Styles */
+@media (max-width: 1200px) {
+    .ChatBox-container {
+        grid-template-rows: 12vh 65vh 10vh;
+    }
+
+    .message {
+        max-width: 24rem;
+    }
+
+    .chat-sender {
+        height: 3rem;
+    }
+
+    .chat-sender > input {
+        font-size: 13px;
+    }
+
+    .chat-sender > div {
+        height: 60%;
+    }
+}
+
+@media (max-width: 992px) {
+    .ChatBox-container {
+        grid-template-rows: 10vh 70vh 10vh;
+    }
+
+    .message {
+        max-width: 20rem;
+    }
+
+    .chat-sender {
+        height: 2.8rem;
+    }
+
+    .chat-sender > input {
+        font-size: 12px;
+    }
+
+    .chat-sender > div {
+        height: 55%;
+    }
+}
+
+@media (max-width: 768px) {
+    .ChatBox-container {
+        grid-template-rows: 8vh 72vh 10vh;
+    }
+
+    .message {
+        max-width: 18rem;
+    }
+
+    .chat-sender {
+        height: 2.5rem;
+    }
+
+    .chat-sender > input {
+        font-size: 11px;
+    }
+
+    .chat-sender > div {
+        height: 50%;
+    }
+}
+
+@media (max-width: 576px) {
+    .ChatBox-container {
+        grid-template-rows: 6vh 74vh 10vh;
+    }
+
+    .message {
+        max-width: 16rem;
+    }
+
+    .chat-sender {
+        height: 2.3rem;
+    }
+
+    .chat-sender > input {
+        font-size: 10px;
+    }
+
+    .chat-sender > div {
+        height: 45%;
+    }
+}
+
+@media (max-width: 480px) {
+    .ChatBox-container {
+        grid-template-rows: 5vh 75vh 10vh;
+    }
+
+    .message {
+        max-width: 14rem;
+    }
+
+    .chat-sender {
+        height: 2rem;
+    }
+
+    .chat-sender > input {
+        font-size: 9px;
+    }
+
+    .chat-sender > div {
+        height: 40%;
+    }
 }
