--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -1,13 +1,25 @@
-.Profile{
+.Profile {
     position: relative;
     display: grid;
     grid-template-columns: 18rem auto 20rem;
     gap: 1rem;
-}
-
-
-.Profile-center{
+  }
+  
+  .Profile-center {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-}
+  }
+  
+  @media screen and (max-width: 1200px) {
+    .Profile {
+      grid-template-columns: 15rem auto 15rem; /* Adjust column widths for medium-sized screens */
+    }
+  }
+  
+  @media screen and (max-width: 992px) {
+    .Profile {
+      grid-template-columns: auto; /* Switch to a single column layout for smaller screens */
+    }
+  }
+  
