--- a/src/components/InfoCard/InfoCard.css
+++ b/src/components/InfoCard/InfoCard.css
@@ -1,5 +1,4 @@
-.InfoCard
-{
+.InfoCard {
     display: flex;
     flex-direction: column;
     gap: 0.75rem;
@@ -9,19 +8,97 @@
     width: 90%;
 }
 
-.infoHead{
+.infoHead {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.infoHead>div:hover{
+.infoHead > div:hover {
     cursor: pointer;
 }
 
-.logout-button{
+.logout-button {
     width: 7rem;
     height: 2rem;
     margin-top: 6rem;
     align-self: flex-end;
+}
+
+/* Responsive Styles */
+@media (max-width: 1200px) {
+    .InfoCard {
+        width: 85%;
+    }
+
+    .logout-button {
+        width: 6rem;
+        height: 1.8rem;
+        margin-top: 5rem;
+    }
+}
+
+@media (max-width: 992px) {
+    .InfoCard {
+        width: 80%;
+    }
+
+    .logout-button {
+        width: 5.5rem;
+        height: 1.6rem;
+        margin-top: 4.5rem;
+    }
+}
+
+@media (max-width: 768px) {
+    .InfoCard {
+        width: 75%;
+    }
+
+    .logout-button {
+        width: 5rem;
+        height: 1.5rem;
+        margin-top: 4rem;
+    }
+
+    .infoHead {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+}
+
+@media (max-width: 576px) {
+    .InfoCard {
+        width: 95%;
+        padding: 0.75rem;
+    }
+
+    .logout-button {
+        width: 4.5rem;
+        height: 1.4rem;
+        margin-top: 3.5rem;
+    }
+
+    .infoHead {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+}
+
+@media (max-width: 480px) {
+    .InfoCard {
+        width: 100%;
+        padding: 0.5rem;
+    }
+
+    .logout-button {
+        width: 4rem;
+        height: 1.3rem;
+        margin-top: 3rem;
+    }
+
+    .infoHead {
+        flex-direction: column;
+        align-items: flex-start;
+    }
 }
