--- a/src/components/PostShare/PostShare.css
+++ b/src/components/PostShare/PostShare.css
@@ -1,4 +1,4 @@
-.PostShare{
+.PostShare {
     display: flex;
     gap: 1rem;
     background-color: var(--cardColor);
@@ -6,20 +6,20 @@
     border-radius: 1rem;
 }
 
-
-.PostShare>img{
+.PostShare>img {
     border-radius: 50%;
     width: 3rem;
     height: 3rem;
 }
-.PostShare>div{
+
+.PostShare>div {
     display: flex;
     flex-direction: column;
     width: 90%;
     gap: 1rem;
 }
 
-.PostShare>div>input{
+.PostShare>div>input {
     background-color: var(--inputColor);
     border-radius: 10px;
     padding: 10px;
@@ -28,16 +28,12 @@
     outline: none;
 }
 
-
-
-
-
-.postOptions{
+.postOptions {
     display: flex;
     justify-content: space-around;
 }
 
-.option{
+.option {
     padding: 5px;
     padding-left: 10px;
     padding-right: 10px;
@@ -48,32 +44,131 @@
     font-size: 12px;
 }
 
-.option:hover{
+.option:hover {
     cursor: pointer;
 }
-.ps-button{
+
+.ps-button {
     padding: 5px;
     padding-left: 20px;
     padding-right: 20px;
     font-size: 12px;
 }
 
-
-.previewImage{
+.previewImage {
     position: relative;
-    /* display: flex; */
 }
 
-.previewImage>svg{
+.previewImage>svg {
     position: absolute;
     right: 1rem;
     top: 0.5rem;
     cursor: pointer;
 }
 
-.previewImage>img{
+.previewImage>img {
     width: 100%;
     max-height: 20rem;
     object-fit: cover;
     border-radius: 0.5rem;
+}
+
+/* Responsive Styles */
+@media (max-width: 1200px) {
+    .PostShare {
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .PostShare>div {
+        width: 100%;
+    }
+    
+    .previewImage>img {
+        max-height: 18rem;
+    }
+}
+
+@media (max-width: 992px) {
+    .PostShare>img {
+        width: 2.5rem;
+        height: 2.5rem;
+    }
+    
+    .PostShare>div>input {
+        font-size: 15px;
+        padding: 8px;
+    }
+    
+    .previewImage>img {
+        max-height: 16rem;
+    }
+}
+
+@media (max-width: 768px) {
+    .PostShare>img {
+        width: 2rem;
+        height: 2rem;
+    }
+    
+    .PostShare>div>input {
+        font-size: 14px;
+        padding: 7px;
+    }
+    
+    .previewImage>img {
+        max-height: 14rem;
+    }
+}
+
+@media (max-width: 576px) {
+    .PostShare {
+        padding: 0.5rem;
+        gap: 0.5rem;
+    }
+    
+    .PostShare>img {
+        width: 1.5rem;
+        height: 1.5rem;
+    }
+    
+    .PostShare>div>input {
+        font-size: 13px;
+        padding: 6px;
+    }
+    
+    .previewImage>img {
+        max-height: 12rem;
+    }
+}
+
+@media (max-width: 480px) {
+    .PostShare>img {
+        width: 1.2rem;
+        height: 1.2rem;
+    }
+    
+    .PostShare>div>input {
+        font-size: 12px;
+        padding: 5px;
+    }
+    
+    .postOptions {
+        flex-direction: column;
+        gap: 5px;
+    }
+    
+    .option {
+        font-size: 10px;
+        padding: 3px 7px;
+    }
+    
+    .ps-button {
+        font-size: 10px;
+        padding: 3px 10px;
+    }
+    
+    .previewImage>img {
+        max-height: 10rem;
+    }
 }
