--- a/src/pages/Chat/Chat.css
+++ b/src/pages/Chat/Chat.css
@@ -34,6 +34,7 @@
   flex-direction: column;
   gap: 1rem;
 }
+
 .conversation:hover {
   background: #80808038;
   cursor: pointer;
@@ -42,6 +43,7 @@
 .conversation {
   border-radius: 0.5rem;
   padding: 10px;
+  position: relative;
 }
 
 .conversation > div {
@@ -53,10 +55,11 @@
   border-radius: 50%;
   position: absolute;
   left: 2rem;
+  top: 50%;
+  transform: translateY(-50%);
   width: 1rem;
   height: 1rem;
 }
-
 
 .chatbox-empty-message {
   display: flex;
@@ -65,12 +68,12 @@
   font-size: 20px;
 }
 
-
 @media screen and (max-width: 768px) {
- .Chat {
+  .Chat {
     grid-template-columns: 16% auto;
   }
-   .follower.conversation>div>.name{
-    display: none;
-   }
+  
+  .conversation > div > .name {
+    display: none; /* Hide the name in conversations on smaller screens */
+  }
 }
